:beers: electron-builder, icon, versioncode in config

--- a/config/index.html
+++ b/config/index.html
@@ -32,6 +32,7 @@
             </div>
         </div>
         <button class="btn btn-primary" onclick="closeWindow()">Schließen</button>
+        <p>Version <span id="version"></span></p>
     </div>
     <script src="main.js"></script>
     <script src="halfmoon/halfmoon.min.js"></script>
