:art: Code restructuring

--- a/src/windows/config/index.html
+++ b/src/windows/config/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="halfmoon/halfmoon-variables.min.css">
+    <link rel="stylesheet" href="../../halfmoon/halfmoon-variables.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -35,7 +35,7 @@
         <p>Version <span id="version"></span></p>
     </div>
     <script src="main.js"></script>
-    <script src="halfmoon/halfmoon.min.js"></script>
+    <script src="../../halfmoon/halfmoon.min.js"></script>
 </body>
 
 </html>
