--- a/src/windows/config/index.html
+++ b/src/windows/config/index.html
@@ -8,19 +8,25 @@
 <body class="dark-mode">
     <div class="content">
         <h1>Einstellungen</h1>
-
+        <strong>Nightscout URL</strong>
+        <p>Beispiel: <code class="code">https://ns.heroku.com/</code> oder <code class="code">https://example.org/</code></p>
         <div class="form-group">
-            <label for="nsurl">Nightscout URL</label>
             <div class="input-group">
                 <input id="nsurl" class="form-control" type="url" />
+                <div class="input-group-append">
+                    <button class="btn btn-success" type="button" onclick="testUrl()">Test</button>
+                </div>
                 <div class="input-group-append">
                     <button class="btn btn-danger" type="button" onclick="save()">Aktualisieren</button>
                 </div>
             </div>
         </div>
-
+        <div class="progress">
+            <div id="nsprogress" class="progress-bar progress-bar-animated" role="progressbar"></div>
+        </div>
+        <br/>
+        <strong>Aktualisierungsrate</strong>
         <div class="form-group">
-            <label>Aktualisierungsrate</label>
             <div class="input-group">
                 <input id="refreshinterval" class="form-control" type="url" />
                 <div class="input-group-append">
@@ -35,7 +41,7 @@
         <p>Version <span id="version"></span></p>
     </div>
     <script src="main.js"></script>
-    <script src="../../halfmoon/halfmoon.min.js"></script>
+    <!-- <script src="../../halfmoon/halfmoon.min.js"></script> -->
 </body>
 
 </html>
