:sparkles: Many,many other noice changes

--- a/src/windows/app/index.html
+++ b/src/windows/app/index.html
@@ -13,7 +13,7 @@
         <p id="timeago-container">Vor <span id="timeago">&times;</span> Minute(n)</p>
     </div>
     <div id="message-container" hidden="true">
-        <p id="message"></p>
+        <p>Fehler: <span id="message"></span></p>
     </div>
     <script src="main.js"></script>
 </body>
